baml_language/crates/baml_tests/snapshots/compiles/parser_expressions/baml_tests__compiles__parser_expressions__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
function user.Calculate() -> int  [expr] {
  { let a = 1 Add 2; let b = a Mul 3; let c = b Div 2 Sub 1; let d = a Add b Mul c; return d }
}
class user.Profile {
  bio: string
  settings: user.Settings
}
class user.Settings {
  theme: string
}
class user.User {
  name: string
  profile: user.Profile
  tags: string[]
}
function user.FieldAccess(user: user.User) -> string  [expr] {
  { let name = user.name; let bio = user.profile.bio; let theme = user.profile.settings.theme; let firstTag = user.tags[0]; return theme }
}
function user.from_json(j: baml.json.json) -> user.User  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.Settings  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.Profile  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  baml.json.parse(baml.json.to_string(self))
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  baml.json.parse(baml.json.to_string(self))
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  baml.json.parse(baml.json.to_string(self))
}
class user.IndexUser {
  name: string
  age: int
  tags: string[]
}
function user.IndexAccess(users: user.IndexUser[]) -> string  [expr] {
  { let first = users[0]; let idx = 1; let second = users[idx]; let firstName = users[0].name; let tag = users[0].tags[0]; return firstName }
}
function user.from_json(j: baml.json.json) -> user.IndexUser  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  baml.json.parse(baml.json.to_string(self))
}
function user.TestPrecedence() -> bool  [expr] {
  { let a = 2 Add 3 Mul 4; let c = 2 Mul 3 Add 4; let b = a Gt 10 Add 2; let d = true Or false And false; return d }
}
