baml_language/crates/baml_tests/snapshots/compiles/parser_expressions/baml_tests__compiles__parser_expressions__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.Calculate() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: int // a
    let _2: int // b
    let _3: int
    let _4: int // c
    let _5: int
    let _6: int
    let _7: int // d
    let _8: int
    let _9: int
    let _10: int
    let _11: int

    bb0: {
        _1 = const 3_i64;
        _3 = copy _1;
        _2 = copy _3 * const 3_i64;
        _6 = copy _2;
        _5 = copy _6 / const 2_i64;
        _4 = copy _5 - const 1_i64;
        _9 = copy _1;
        _10 = copy _2;
        _8 = copy _9 + copy _10;
        _11 = copy _4;
        _7 = copy _8 * copy _11;
        _0 = copy _7;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.FieldAccess(user: User) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: User // user // param
    let _2: string // theme
    let _3: string[]
    let _4: 0

    bb0: {
        _2 = copy _1.1.1.0;
        _3 = copy _1.2;
        _4 = const 0_i64;
        _0 = copy _2;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.User.from_json(j: baml.json.json) -> User {
    // Locals:
    let _0: User // _0 // return
    let _1: baml.json.json // j // param
    let _2: string
    let _3: type

    bb0: {
        _2 = call const fn baml.json.stringify(copy _1) -> [bb1];
    }

    bb1: {
        _3 = load_type(User);
        _0 = call const fn baml.json.from_string<copy _3>(copy _2) -> [bb2];
    }

    bb2: {
        return;
    }
}

fn user.Settings.from_json(j: baml.json.json) -> Settings {
    // Locals:
    let _0: Settings // _0 // return
    let _1: baml.json.json // j // param
    let _2: string
    let _3: type

    bb0: {
        _2 = call const fn baml.json.stringify(copy _1) -> [bb1];
    }

    bb1: {
        _3 = load_type(Settings);
        _0 = call const fn baml.json.from_string<copy _3>(copy _2) -> [bb2];
    }

    bb2: {
        return;
    }
}

fn user.Profile.from_json(j: baml.json.json) -> Profile {
    // Locals:
    let _0: Profile // _0 // return
    let _1: baml.json.json // j // param
    let _2: string
    let _3: type

    bb0: {
        _2 = call const fn baml.json.stringify(copy _1) -> [bb1];
    }

    bb1: {
        _3 = load_type(Profile);
        _0 = call const fn baml.json.from_string<copy _3>(copy _2) -> [bb2];
    }

    bb2: {
        return;
    }
}

fn user.Profile.to_json(self: Profile) -> baml.json.json {
    // Locals:
    let _0: baml.json.json // _0 // return
    let _1: Profile // self // param
    let _2: string
    let _3: type

    bb0: {
        _3 = load_type(Profile);
        _2 = call const fn baml.json.to_string<copy _3>(copy _1) -> [bb1];
    }

    bb1: {
        _0 = call const fn baml.json.parse(copy _2) -> [bb2];
    }

    bb2: {
        return;
    }
}

fn user.User.to_json(self: User) -> baml.json.json {
    // Locals:
    let _0: baml.json.json // _0 // return
    let _1: User // self // param
    let _2: string
    let _3: type

    bb0: {
        _3 = load_type(User);
        _2 = call const fn baml.json.to_string<copy _3>(copy _1) -> [bb1];
    }

    bb1: {
        _0 = call const fn baml.json.parse(copy _2) -> [bb2];
    }

    bb2: {
        return;
    }
}

fn user.Settings.to_json(self: Settings) -> baml.json.json {
    // Locals:
    let _0: baml.json.json // _0 // return
    let _1: Settings // self // param
    let _2: string
    let _3: type

    bb0: {
        _3 = load_type(Settings);
        _2 = call const fn baml.json.to_string<copy _3>(copy _1) -> [bb1];
    }

    bb1: {
        _0 = call const fn baml.json.parse(copy _2) -> [bb2];
    }

    bb2: {
        return;
    }
}

fn user.IndexAccess(users: IndexUser[]) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: IndexUser[] // users // param
    let _2: IndexUser[]
    let _3: 0
    let _4: int // idx
    let _5: IndexUser[]
    let _6: int
    let _7: string // firstName
    let _8: IndexUser
    let _9: IndexUser[]
    let _10: 0
    let _11: string[]
    let _12: IndexUser
    let _13: IndexUser[]
    let _14: 0
    let _15: 0

    bb0: {
        _2 = copy _1;
        _3 = const 0_i64;
        _4 = const 1_i64;
        _5 = copy _1;
        _6 = copy _4;
        _9 = copy _1;
        _10 = const 0_i64;
        _8 = copy _9[_10];
        _7 = copy _8.0;
        _13 = copy _1;
        _14 = const 0_i64;
        _12 = copy _13[_14];
        _11 = copy _12.2;
        _15 = const 0_i64;
        _0 = copy _7;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.IndexUser.from_json(j: baml.json.json) -> IndexUser {
    // Locals:
    let _0: IndexUser // _0 // return
    let _1: baml.json.json // j // param
    let _2: string
    let _3: type

    bb0: {
        _2 = call const fn baml.json.stringify(copy _1) -> [bb1];
    }

    bb1: {
        _3 = load_type(IndexUser);
        _0 = call const fn baml.json.from_string<copy _3>(copy _2) -> [bb2];
    }

    bb2: {
        return;
    }
}

fn user.IndexUser.to_json(self: IndexUser) -> baml.json.json {
    // Locals:
    let _0: baml.json.json // _0 // return
    let _1: IndexUser // self // param
    let _2: string
    let _3: type

    bb0: {
        _3 = load_type(IndexUser);
        _2 = call const fn baml.json.to_string<copy _3>(copy _1) -> [bb1];
    }

    bb1: {
        _0 = call const fn baml.json.parse(copy _2) -> [bb2];
    }

    bb2: {
        return;
    }
}

fn user.TestPrecedence() -> bool {
    // Locals:
    let _0: bool // _0 // return
    let _1: int // a
    let _2: int
    let _3: bool // d

    bb0: {
        _1 = const 14_i64;
        _2 = copy _1;
        _3 = short_circuit(||) const true -> [eval: bb1, join: bb3];
    }

    bb1: {
        _3 = short_circuit(&&) const false -> [eval: bb2, join: bb3];
    }

    bb2: {
        _3 = const false;
        goto -> bb3;
    }

    bb3: {
        _0 = copy _3;
        goto -> bb4;
    }

    bb4: {
        return;
    }
}
