baml_language/crates/baml_tests/snapshots/compiles/parser_expressions/baml_tests__compiles__parser_expressions__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.Calculate() -> int throws never {
  { : never
    let a = 1 + 2 : 3 -> int
    let b = a * 3 : int
    let c = b / 2 - 1 : int
    let d = a + b * c : int
    return d : int
  }
}
function user.FieldAccess(user: user.User) -> string throws never {
  { : never
    let name = user.name : string
    let bio = user.profile.bio : string
    let theme = user.profile.settings.theme : string
    let firstTag = user.tags[0] : string
    return theme : string
  }
}
class user.User {
  name: string
  profile: user.Profile
  tags: string[]
}
function user.User.to_json(self: user.User) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  baml.json.parse(baml.json.to_string<User>(self)) : baml.json.json
}
function user.User.from_json(j: baml.json.json) -> user.User throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.User
}
class user.Profile {
  bio: string
  settings: user.Settings
}
function user.Profile.to_json(self: user.Profile) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  baml.json.parse(baml.json.to_string<Profile>(self)) : baml.json.json
}
function user.Profile.from_json(j: baml.json.json) -> user.Profile throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.Profile
}
class user.Settings {
  theme: string
}
function user.Settings.to_json(self: user.Settings) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  baml.json.parse(baml.json.to_string<Settings>(self)) : baml.json.json
}
function user.Settings.from_json(j: baml.json.json) -> user.Settings throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.Settings
}
class user.User$stream {
  name: null | string
  profile: null | user.Profile$stream
  tags: string[]
}
class user.Profile$stream {
  bio: null | string
  settings: null | user.Settings$stream
}
class user.Settings$stream {
  theme: null | string
}
class user.IndexUser {
  name: string
  age: int
  tags: string[]
}
function user.IndexUser.to_json(self: user.IndexUser) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  baml.json.parse(baml.json.to_string<IndexUser>(self)) : baml.json.json
}
function user.IndexUser.from_json(j: baml.json.json) -> user.IndexUser throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.IndexUser
}
function user.IndexAccess(users: user.IndexUser[]) -> string throws never {
  { : never
    let first = users[0] : user.IndexUser
    let idx = 1 : 1 -> int
    let second = users[idx] : user.IndexUser
    let firstName = users[0].name : string
    let tag = users[0].tags[0] : string
    return firstName : string
  }
}
class user.IndexUser$stream {
  name: null | string
  age: null | int
  tags: string[]
}
function user.TestPrecedence() -> bool throws never {
  { : never
    let a = 2 + 3 * 4 : 14 -> int
    let c = 2 * 3 + 4 : 10 -> int
    let b = a > 10 + 2 : bool
    let d = true || false && false : true -> bool
    return d : bool
  }
}
