baml_language/crates/baml_tests/snapshots/compiles/parser_expressions/baml_tests__compiles__parser_expressions__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 15561
---
=== COMPILER2 DIAGNOSTICS ===
No errors found.
