baml_language/crates/baml_tests/snapshots/compiles/parser_expressions/baml_tests__compiles__parser_expressions__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function user.Calculate() -> int {
    load_const 3
    load_const 3
    mul_int
    store_var b
    load_const 3
    load_var b
    bin_op +
    load_var b
    load_const 2
    bin_op /
    load_const 1
    bin_op -
    bin_op *
    return
}

function user.FieldAccess(user: User) -> string {
    load_var user
    load_field .profile
    load_field .settings
    load_field .theme
    return
}

function user.IndexAccess(users: IndexUser[]) -> string {
    load_var users
    load_const 0
    load_array_element
    load_field .name
    return
}

function user.IndexUser.from_json(j: baml.json.json) -> IndexUser {
    load_var j
    call baml.json.stringify
    store_var _2
    load_type IndexUser
    load_var _2
    call baml.json.from_string
    return
}

function user.IndexUser.to_json(self: null) -> baml.json.json {
    load_type IndexUser
    load_var self
    call baml.json.to_string
    call baml.json.parse
    return
}

function user.Profile.from_json(j: baml.json.json) -> Profile {
    load_var j
    call baml.json.stringify
    store_var _2
    load_type Profile
    load_var _2
    call baml.json.from_string
    return
}

function user.Profile.to_json(self: null) -> baml.json.json {
    load_type Profile
    load_var self
    call baml.json.to_string
    call baml.json.parse
    return
}

function user.Settings.from_json(j: baml.json.json) -> Settings {
    load_var j
    call baml.json.stringify
    store_var _2
    load_type Settings
    load_var _2
    call baml.json.from_string
    return
}

function user.Settings.to_json(self: null) -> baml.json.json {
    load_type Settings
    load_var self
    call baml.json.to_string
    call baml.json.parse
    return
}

function user.TestPrecedence() -> bool {
    load_const true
    jump_if_false L0
    jump L1

  L0:
    pop 1
    load_const false
    jump_if_false L1
    pop 1
    load_const false

  L1:
    return
}

function user.User.from_json(j: baml.json.json) -> User {
    load_var j
    call baml.json.stringify
    store_var _2
    load_type User
    load_var _2
    call baml.json.from_string
    return
}

function user.User.to_json(self: null) -> baml.json.json {
    load_type User
    load_var self
    call baml.json.to_string
    call baml.json.parse
    return
}
